// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elevation ElevationFifth should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ eIPjic"
/>
`;

exports[`Elevation ElevationFirst should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ foLzlM"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ eoTEca"
/>
`;

exports[`Elevation ElevationFourth should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ hYqcCc"
/>
`;

exports[`Elevation ElevationSecond should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ oINiI"
/>
`;

exports[`Elevation ElevationThird should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ Mxmno"
/>
`;
